# counting-cetacean-mamals

./: README.txt
CPP_Program/: CMakeLists.txt  Location.cpp  Location.h  Mammal.cpp  Mammal.h  main.cpp
C_Program/: CMakeLists.txt  calculate_positions.c  functions.h  insert_observers.c  insert_sightings.c  main.c  print_observers.c  print_sightings.c  shared.h
